# spw-wallet

./: .gitignore  LICENSE  README.md
connect/: README.md  SPEC.md
connect/demo-flask/: README.md  app.py  requirements.txt
connect/demo-flask/static/: spw-connect.js
connect/demo-flask/templates/: index.html
connect/extension-archived-v0/: .gitignore  ARCHIVED.md  PRIVACY.md  README.md  SMOKE_TEST.md  STORE_LISTING.md  content.js  inject.js  manifest.json  pack.sh  popup.html  popup.js  test-fallback.html
connect/extension-archived-v0/screenshots/: README.md  _shared.css  promo-marquee.html  promo-small.html  screenshot-1-hero.html  screenshot-2-popup.html  screenshot-3-code.html
connect/sdk-js/: README.md  package.json  spw-connect.d.ts  spw-connect.js
connect/verify-js/: README.md  index.d.ts  index.js  package-lock.json  package.json  test.js
connect/verify-py/: README.md  pyproject.toml
connect/verify-py/spw_verify.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
connect/verify-py/tests/: test_verify.py
extension-v2/: .gitignore  PRIVACY.md  README.md  STORE_LISTING.md  manifest.json  pack.sh  package-lock.json  package.json  popup.html  popup.js  vendor.entry.js
extension-v2/lib/: chainCache.js  crypto.js  rpc.js  spw.js  txClassify.js  ui.js  vault.js
extension-v2/screens/: activity.js  home.js  onboarding.js  receive.js  send.js  settings.js  unlock.js
extension-v2/styles/: main.css
wallet/: bip39.py  bip39_words.py  wallet.py
wallet_web/: app-incorrect.jfif  index.html  manifest.json  sw.js
