[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spw-verify"
version = "1.0.0"
description = "Server-side verifier for SPW Connect wallet sign-in proofs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "SPW" }]
keywords = ["spw", "wallet", "sign-in", "web3", "secp256k1"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
]

# No required deps: uses hashlib + tries coincurve, falls back to ecdsa.
# Users should pick one:
#   pip install spw-verify coincurve   # recommended
#   pip install spw-verify ecdsa       # pure-Python
dependencies = []

[project.optional-dependencies]
fast = ["coincurve>=18.0"]
pure = ["ecdsa>=0.18"]
test = ["pytest>=7", "coincurve>=18.0"]

[project.urls]
Homepage = "https://github.com/otisaipro/spw-wallet"
Source = "https://github.com/otisaipro/spw-wallet/tree/main/connect/verify-py"
Spec = "https://github.com/otisaipro/spw-wallet/blob/main/connect/SPEC.md"

[tool.setuptools.packages.find]
include = ["spw_verify*"]
